build: try fixing android sdk NoClassDefFoundError error in azure